# omniwheel-robot

./: .gitignore  README.md  base-haut.SLDPRT  lateral-cover.SLDPRT  robot-omniwheel.SLDASM
3D-Design/: JGA25-370 DC12V350RPM.SLDPRT  L298N_Driver.SLDASM  Motor_JGA25-371_12VDC_250RPM.SLDPRT  README.md  Wippschalter Rund - BG LED.SLDASM  accouplement-roue.SLDPRT  base-haut.SLDPRT  bass-robot.SLDPRT  etage-1.SLDPRT  main_board_proto.SLDASM  main_board_proto_v1.SLDASM  main_board_proto_v1_9_12_2024.SLDASM  raspberry-pi-4.SLDASM  robot-omniwheel.SLDASM  supportRealsense.SLDPRT
PCB_BOARD/: #auto_saved_files#  README.md  ST_prot.csv  ST_prot.kicad_pcb  ST_prot.kicad_prl  ST_prot.kicad_pro  ST_prot.kicad_sch  ST_prot.xml  fp-info-cache
dc-12v-37d-gearmotor-china-1.snapshot.1/: 37d-gearmotor-100rpm.x_t
multistar-hobbyking-high-capacity-3s-3000mah-multi-rotor-lipo-pack-1.snapshot.4/: Assembly_Multistar_Battery_3000mah.SLDASM  Assembly_Multistar_Battery_3000mah.STEP  Multistar_3000mAh_4S_Lipo_Battery.SLDPRT  (+1 more)
omniwheel_controller/: CMakeLists.txt  README.md  package.xml
omniwheel_controller/include/omniwheel_controller/: LowLevelController.hpp
omniwheel_controller/ino/: arduini_test_omniwheel.ino
omniwheel_controller/ino/arduini_test_omniwheel/: arduini_test_omniwheel.ino
omniwheel_controller/scripts/: client_tcp.py  gui_controller.py  omniwheel_controller.py  plotter_vel_saved.py  robot_controller.py  serial_omniwheel.py  tcp_wheel_publisher_node.py  zmq_client.py  zmq_server.py
omniwheel_controller/src/: main.cpp
omniwheel_controller/ui/: controller.ui
(+122 files in other folders)
